# tinyformer

./: .gitignore  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  main.cpp  tensor.hpp
include/: executor.hpp  graph.hpp  memory.hpp  ops.hpp  tensor.hpp
src/: main.cpp
